samples/_failures_safe/1761247611_d0efa0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_397395e4.c: In function ‘main’:
./samples/SAFE/__tmp_397395e4.c:181:12: error: expected identifier or ‘(’ at end of input
  181 |     struct Token
      |            ^~~~~
./samples/SAFE/__tmp_397395e4.c:181:12: error: expected declaration or statement at end of input
